about text-align fix

--- a/css/styles.styl
+++ b/css/styles.styl
@@ -62,6 +62,9 @@ body
 .about-title
   margin-top: 0
 
+.about-paragraph
+  text-align: justify
+
 .link
   color: linkColor
   text-decoration: underline
